--- a/Fase1/index.html
+++ b/Fase1/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <script>
-        var num1;;
-        var num2;
-        var num3;
-        var num4;
-        var num5;
+        var num1=prompt("Introdueix el nom de la primera ciutat: ");
+        var num2=prompt("Introdueix el nom de la segona ciutat: ");
+        var num3=prompt("Introdueix el nom de la tercera ciutat: ");
+        var num4=prompt("Introdueix el nom de la quarta ciutat: ");
+        var num5=prompt("Introdueix el nom de la cinquena ciutat: ");
     </script>
 </body>
 </html>
