Es mostren per consola les ciutats

--- a/Fase1/index.html
+++ b/Fase1/index.html
@@ -12,6 +12,8 @@
         var num3=prompt("Introdueix el nom de la tercera ciutat: ");
         var num4=prompt("Introdueix el nom de la quarta ciutat: ");
         var num5=prompt("Introdueix el nom de la cinquena ciutat: ");
+
+        console.log(num1+ ",", num2+ "," , num3+ ",", num4+ ",", num5+ ",");
     </script>
 </body>
 </html>
