Inloc una sisena ciutat

--- a/Fase1/index.html
+++ b/Fase1/index.html
@@ -12,8 +12,9 @@
         var num3=prompt("Introdueix el nom de la tercera ciutat: ");
         var num4=prompt("Introdueix el nom de la quarta ciutat: ");
         var num5=prompt("Introdueix el nom de la cinquena ciutat: ");
+        var num6=prompt("Introdueix el nom de la sisena ciutat: ");
 
-        console.log(num1+ ",", num2+ "," , num3+ ",", num4+ ",", num5+ ",");
+        console.log(num1+ ",", num2+ "," , num3+ ",", num4+ ",", num5+ ",", num5+ ",",num6+ "," );
     </script>
 </body>
 </html>
