--- a/Fase3/index.html
+++ b/Fase3/index.html
@@ -5,23 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enunciat Noms Ciutats - Fase3</title>
 </head>
+
+    <p>Mira la consola per veure el resultat tal i com es demana en l'exercici</p>
+    
 <body>
     <script>
         var num1=prompt("Introdueix el nom de la primera ciutat: ");
         var num2=prompt("Introdueix el nom de la segona ciutat: ");
-        //var num3=prompt("Introdueix el nom de la tercera ciutat: ");
-        //var num4=prompt("Introdueix el nom de la quarta ciutat: ");
-        //var num5=prompt("Introdueix el nom de la cinquena ciutat: ");
-        //var num6=prompt("Introdueix el nom de la sisena ciutat: ");
+        var num3=prompt("Introdueix el nom de la tercera ciutat: ");
+        var num4=prompt("Introdueix el nom de la quarta ciutat: ");
+        var num5=prompt("Introdueix el nom de la cinquena ciutat: ");
+        var num6=prompt("Introdueix el nom de la sisena ciutat: ");
 
-        var arrayCiutats = [num1, num2];
+        var arrayCiutats = [num1, num2, num3, num4, num5, num6];
         var arrayCiutatsIntermitja = [];
         var arrayCiutatsModificada = [];
-        var i;
+        var arryIntermitjaLength;
+
         console.log(arrayCiutats);
-        console.log(arrayCiutatsIntermitja);
-        for(i=0; i<arrayCiutats.length; i++){
-            
+  
+        for(i=0; i<arrayCiutats.length; i++){   
             for(j=0; j<arrayCiutats[i].length; j++){
                 let miLetra = arrayCiutats[i].charAt(j)
                 if(miLetra == "a" || miLetra =="e" || miLetra=="i"|| miLetra=="o"|| miLetra=="u"){
@@ -33,9 +36,9 @@
 
         }
 
+
         //Primera ciutat
         var primeraPalabra =arrayCiutats[0].length;
-        console.log(primeraPalabra);
         var nombre1 =  arrayCiutatsIntermitja.slice(0, primeraPalabra);
         window.alert(nombre1);
         var nombre11 = [];
@@ -47,10 +50,8 @@
 
         //Segona ciutat
         var segonaPalabra =arrayCiutats[1].length;
-        var segonaParaula = primeraPalabra +segonaPalabra+3;
-        console.log(segonaPalabra);
-        console.log(segonaParaula);
-        var nombre2 =  arrayCiutatsIntermitja.slice(0, segonaParaula);
+        var segonaParaula = primeraPalabra +segonaPalabra;
+        var nombre2 =  arrayCiutatsIntermitja.slice(primeraPalabra, segonaParaula);
         window.alert(nombre2);
         var nombre22 = [];
         for(z=0; z<nombre2.length; z= z+2){
@@ -58,15 +59,52 @@
          }
         arrayCiutatsModificada.push(nombre22[1]);
 
-        /*//Tercera ciutat
+        //Tercera ciutat
         var terceraPalabra =arrayCiutats[2].length;
-        var nombre3 =  arrayCiutatsIntermitja.slice(0, terceraPalabra);
+        var terceraParaula = primeraPalabra +segonaPalabra+ terceraPalabra;
+        var nombre3 =  arrayCiutatsIntermitja.slice(segonaParaula, terceraParaula);
         window.alert(nombre3);
         var nombre33 = [];
         for(z=0; z<nombre3.length; z= z+2){
             nombre33.push(nombre3.join(''));
          }
-        arrayCiutatsModificada.push(nombre33[0]);*/
+        arrayCiutatsModificada.push(nombre33[0]);
+
+        //Cuarta ciutat
+        var cuartaPalabra =arrayCiutats[3].length;
+        var cuartaParaula = primeraPalabra +segonaPalabra+ terceraPalabra + cuartaPalabra;
+        var nombre4 =  arrayCiutatsIntermitja.slice(terceraParaula, cuartaParaula);
+        window.alert(nombre4);
+        var nombre44 = [];
+        for(z=0; z<nombre4.length; z= z+2){
+            nombre44.push(nombre4.join(''));
+         }
+
+        arrayCiutatsModificada.push(nombre44[0]);
+
+        //Cinquena ciutat
+        var cinquenaPalabra =arrayCiutats[4].length;
+        var cinquenaParaula = primeraPalabra + segonaPalabra + terceraPalabra + cuartaPalabra + cinquenaPalabra;
+        var nombre5 =  arrayCiutatsIntermitja.slice(cuartaParaula, cinquenaParaula);
+        window.alert(nombre5);
+        var nombre55 = [];
+        for(z=0; z<nombre5.length; z= z+2){
+            nombre55.push(nombre5.join(''));
+         }
+
+        arrayCiutatsModificada.push(nombre55[0]);
+
+        //Sisena ciutat
+        var sisenaPalabra =arrayCiutats[5].length;
+        var sisenaParaula = primeraPalabra + segonaPalabra + terceraPalabra + cuartaPalabra + cinquenaPalabra +sisenaPalabra;
+        var nombre6 =  arrayCiutatsIntermitja.slice(cinquenaParaula, sisenaParaula);
+        window.alert(nombre6);
+        var nombre66 = [];
+        for(z=0; z<nombre6.length; z= z+2){
+            nombre66.push(nombre6.join(''));
+         }
+
+        arrayCiutatsModificada.push(nombre66[0]);
 
 
         console.log(arrayCiutatsModificada);
